--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:context=".View.home.HomeActivity">
-
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -18,24 +17,35 @@
             android:layout_height="300dp">
             <View
                 android:layout_width="match_parent"
-                android:layout_height="220dp"
+                android:layout_height="180dp"
                 android:background="@color/colorPrimary"/>
             <TextView
-                android:id="@+id/title"
+                android:id="@+id/home_header"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/colorCardPrimary"
-                android:textSize="25dp"
-                android:text="@string/app_name"
+                android:textSize="20dp"
+                android:text="@string/home_header"
                 android:textStyle="bold"
                 android:layout_marginHorizontal="15dp"
                 android:layout_marginTop="20dp"
                 android:padding="4sp" />
+            <TextView
+                android:id="@+id/home_subheader"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorCardPrimary"
+                android:textSize="25dp"
+                android:text="@string/home_subheader"
+                android:textStyle="bold"
+                android:layout_marginHorizontal="15dp"
+                android:padding="4sp"
+                android:layout_below="@id/home_header"/>
             <androidx.cardview.widget.CardView
             android:id="@+id/card_search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/title"
+            android:layout_below="@id/home_subheader"
             android:layout_marginHorizontal="15dp"
             android:layout_marginTop="15dp"
             app:cardBackgroundColor="@color/colorCardPrimary"
@@ -52,41 +62,6 @@
                     android:drawablePadding="10dp"
                     android:layout_marginLeft="-20dp"/>
             </androidx.cardview.widget.CardView>
-
-<!--                        <androidx.cardview.widget.CardView-->
-<!--                android:id="@+id/card_search"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_below="@id/title"-->
-<!--                android:layout_marginHorizontal="15dp"-->
-<!--                android:layout_marginTop="15dp"-->
-<!--                app:cardBackgroundColor="@color/colorCardPrimary"-->
-<!--                app:cardCornerRadius="5dp"-->
-<!--                app:cardElevation="0dp">-->
-<!--                <EditText-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="50dp"-->
-<!--                    android:id="@+id/editTextSearch"-->
-<!--                    android:padding="10dp"-->
-<!--                    android:hint="@string/search"-->
-<!--                    android:textColorHint="@color/colorCardBottomText"-->
-<!--                    android:drawableLeft="@drawable/ic_baseline_search_24"-->
-<!--                    android:drawablePadding="10dp"/>-->
-<!--            </androidx.cardview.widget.CardView>-->
-            <androidx.viewpager.widget.ViewPager
-                android:id="@+id/view_pager_header"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:foregroundGravity="center"
-                android:clipToPadding="false"
-                android:layout_below="@+id/card_search"
-                android:layout_marginTop="10dp"
-                android:overScrollMode="never">
-                <include
-                    android:id="@+id/shimmer_meal"
-                    layout="@layout/item_view_pager_header_shimmer" />
-            </androidx.viewpager.widget.ViewPager>
-
             <TextView
                 android:id="@+id/title_category"
                 android:text="@string/meal_category"
@@ -95,11 +70,10 @@
                 android:textStyle="bold"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="30dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/view_pager_header"/>
-
+                android:layout_below="@id/card_search"/>
             <TextView
                 android:id="@+id/noResultsTextView"
                 android:layout_width="wrap_content"
@@ -107,9 +81,8 @@
                 android:layout_centerInParent="true"
                 android:text="There is no such category"
                 android:visibility="gone"
-                android:layout_below="@id/title_category"
-                />
-
+                android:layout_marginTop="30dp"
+                android:layout_below="@id/title_category"/>
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_category"
                 android:scrollbars="none"
@@ -120,11 +93,9 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
-                android:layout_marginBottom="50dp" />
-
+                android:layout_marginBottom="50dp"/>
             <include android:id="@+id/shimmer_category"
-                layout="@layout/item_recycler_category_shimmer" />
-
+                layout="@layout/item_recycler_category_shimmer"/>
         </RelativeLayout>
     </androidx.core.widget.NestedScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
